test/spec_vectors/memory_init64/ok/module_6.wat
(module (memory i64 1) (data "7") (func (export "test") (data.drop 0) (data.drop 0)))