test/spec_vectors/memory_init64/fail/module_5.wat
(module (memory i64 1) (data "7") (func (export "test") (data.drop 4)))